test/fail/tok_pluspluseq.lily
#[
SyntaxError: '++=' is not a valid token.
    from tok_pluspluseq.lily:6:
]#

++=
